--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my first github repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>hi hi hi</h1>
-<h2>hello hello hello</h2>
+    <h1>hi hi hi</h1>
+    <h2>hello hello hello</h2>  
 </body>
 </html>
