--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <h1>hi hi hi</h1>
-    <h2>hello hello hello</h2>  
+    <h2>hello hello hello</h2>
+    <img src="pexels-pixabay-65894.jpg" alt="">
+    <img src="pexels-pixabay-60597.jpg" alt="">  
 </body>
 </html>
