--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1>hi hi hi</h1>
     <h2>hello hello hello</h2>
+    <img src="images/pexels-pixabay-15239.jpg" alt="">
     <img src="pexels-pixabay-65894.jpg" alt="">
     <img src="pexels-pixabay-60597.jpg" alt="">  
 </body>
